--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,20 @@
-body{
-  background-color: rgb(44, 59, 90);
-  color: white;
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-register input{
+  border-radius: 0;
+  margin-bottom: -1px;
 }
